# span-or-vector

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classspan__or__vector_1_1detail_1_1span__or__vector__assignments.html  classspan__or__vector_1_1detail_1_1span__or__vector__base.html  classspan__or__vector_1_1detail_1_1span__or__vector__element__access.html  classspan__or__vector_1_1detail_1_1span__or__vector__modifiers.html  classspan__or__vector_1_1span__or__vector.html  cpp.hint  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7c2323c48cb690b6bd1242ce883d29da.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  namespacespan__or__vector.html  namespacespan__or__vector_1_1detail.html  namespacestd.html  pages.html  searchdata-v1.js  span__or__vector_8hpp.html  vcpkg.json
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/span_or_vector/: span_or_vector.hpp
test/: CMakeLists.txt
test/source/: span_or_vector.cpp  span_or_vector_test.cpp
